[metadata]
name = lunar-aiohttp-interceptor
version = 0.2.1
description = The Lunar aiohttp interceptor used to manage the framwork traffic.
author = Lunar
author_email = support@lunar.dev

[options]
setup_requires = setuptools_scm
package_dir = =src
packages = find:
install_requires =
    aiohttp>=3.5.2
python_requires = >=3.6.8

[options.packages.find]
include = lunar_aiohttp_interceptor*
where = src

[options.package_data]
lunar_aiohttp_interceptor = py.typed
