[metadata]
name = lunar-interceptor
version = 0.3.0
description = The Lunar interceptor used to manage the framwork traffic.
author = Lunar
author_email = support@lunar.dev
license = MIT License 

[options]
setup_requires = setuptools_scm
package_dir = =src
packages = find:
install_requires =
    yarl==1.9.2
python_requires = >=3.6.8

[options.packages.find]
include = lunar_interceptor*
where = src

[options.package_data]
lunar_interceptor = py.typed
