[project]
name = "id-aware-mcp-server"
version = "0.1.0"
description = "MCP server that verifies JWT identity tokens and exposes user claims via tools"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.scripts]
id-aware-mcp-server = "server:main"
